[project]
name = "Kita"
version = "0.1.0"
description = "Telegram suggestions bot"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiogram[i18n]>=3.24.0",
    "aiohttp-socks>=0.11.0",
    "aiosqlite>=0.22.1",
    "alembic>=1.18.3",
    "pydantic-settings>=2.12.0",
    "sqlalchemy>=2.0.45",
]
