[project]
name = "Kita"
version = "0.1.0"
description = "Telegram suggestions bot"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiogram-dialog>=2.6.0",
    "aiogram[i18n]>=3.24.0",
    "aiohttp-socks>=0.11.0",
    "alembic>=1.18.3",
    "asyncpg>=0.31.0",
    "dishka>=1.9.1",
    "pydantic-settings>=2.12.0",
    "redis>=7.3.0",
    "sqlalchemy>=2.0.45",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "auto"
